--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="中国蚁剑是一款开源的网站管理工具" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>中国蚁剑</title>
+  <link rel="icon" href="/static/imgs/favicon.ico">
   <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.min.css" />
   <link rel="stylesheet" href="/static/font-awesome/css/font-awesome.min.css" />
 </head>
