--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="author" content="蚁逅 <u@uyu.us>" />
   <meta name="weibo" content="http://weibo.com/antoor" />
   <meta name="keywords" content="ANT, AntSword, 中国蚁剑, 蚁剑, webshell管理, 网站管理" />
-  <meta name="description" content="中国蚁剑是一款开源的网站管理工具" />
+  <meta name="description" content="中国蚁剑是一款开源的跨平台网站管理工具，支持三大主流系统：osx、windows、linux；支持三大主流脚本：asp、aspx、php。" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>中国蚁剑</title>
   <link rel="icon" href="/static/imgs/favicon.ico">
